# your-health

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROMPT.md  README.md  SPEC.md  pyproject.toml  ralph.sh
.github/workflows/: ci.yml
config/: plan.example.yaml
config/.garmin_tokens/: garmin_tokens.json
src/health/: cli.py
src/health/db/: conn.py  schema.sql
src/health/ingest/: garmin.py  models.py  runner.py  store.py
src/health/metrics/: activity.py  load.py  physiology.py
src/health/plan/: adherence.py  loader.py  schema.py
src/health/report/: _runner.py  daily.py  render.py  weekly.py
tests/: conftest.py  test_cli.py  test_cli_plan.py  test_cli_report.py  test_conftest.py
tests/db/: test_conn.py  test_schema.py
tests/fixtures/garmin/: sleep_day.json  summary_day.json
tests/ingest/: test_garmin.py  test_models.py  test_runner.py  test_store.py
tests/metrics/: test_activity.py  test_load.py  test_physiology.py
tests/plan/: test_adherence.py  test_loader.py  test_schema.py
tests/report/: test_daily.py  test_render.py  test_weekly.py
