[project]
name = "health"
version = "0.1.0"
description = "Personal health data analysis: Garmin → SQLite → Markdown reports + plan adherence"
requires-python = ">=3.12"
dependencies = [
    "garminconnect>=0.3.3",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "rich>=13.7",
    "garth>=0.8.0",
]

[project.scripts]
health = "health.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["garminconnect.*", "garth.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
